<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.thcomp.ble_sample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swWorkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/ble_central"
            android:textOff="@string/ble_peripheral"
            android:text="@string/ble_work_mode"
            app:showText="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="8dp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swWorkSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ble_work_switch"/>

        <View
            android:layout_width="1dp"
            android:layout_height="8dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0">

            <FrameLayout
                android:id="@+id/flPeripheralArea"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ExpandableListView
                    android:id="@+id/elvServiceList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flCentralArea"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ExpandableListView
                    android:id="@+id/elvPeripheralList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
        </FrameLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
